--- a/RemoteWakeUp/ClientApp/src/style.css
+++ b/RemoteWakeUp/ClientApp/src/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     display: flex;
-    place-items: center;
+    align-items: center;
+    justify-content: center;
     min-width: 320px;
     min-height: 90vh;
     background-color: #f5f5f5;
@@ -15,7 +16,8 @@ body {
 
 #app {
     max-width: 1280px;
-    margin: 0 auto;
+    width: 100%;
     padding: 2rem;
     text-align: center;
+    overflow: auto;
 }
